                   spectcldaq (gui).

November  6, 2007 - Convert to svn repository
November 26, 2007 - BZ 327 - Fix multicolored monster problems with changing spectra
                    in resopnse to tree parameter range changes.
December 4,2007   - Correct the Usage member of the calibration fit command so that
                    it reflects the change in the name of the command.

January 3, 2008   - Install splash/license.terms -> $(prefix)/splash.license
                    to comply with its license terms.
Finalized Pre-release 4 January 3, 2008

Start edit level 3.2-pre5 (may change to 3.2-001 midstream.. watch the log below).
January 7, 2008   - Fixed include license.terms in the build.
                  - GUI Attach -pipe was failing due to attempts to set
                    the value of the buffersize widget prior to the creation
                    of that widget's spinbox.
January 9, 2008   - Add needParameter virtual to CSpectrum class hierarchy.
                    this is used to know which list spectra belong in.
January 10, 2008  - Fix errors in 1d construction.
          	  - Use spectra organized by parameter to make
                    increments a bit more efficent.
		  - Use observers to maintain the flattened gate lists
                    so there's no increment time overhead.
January 11, 2008 - Make CFlattenedGateList work even if the gate container
                   for the gate has changed from the inserted one.. 
                   that is match the name.
January 16, 2008 - Separate filter output formatting from the filter
                   class itself.
January 17, 2008 - Provide extensible filter format structure.
                 - Fix error in filter save in gui .. parameter list had
		   an extra layer of {}'s.
                 - Add ability to introspect filter format.
January 18, 2008 - Added support for the newer spectrum types to the API
                 - Added filter support to the API.